Reset(yusrmuttaqienv5): Work in progress info

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
-$black: #101010;
-$white: #c7c7c7;
+$blue-base: #001c30;
+$blue-light: #dafffb;
+$blue-text: #64ccc5;
 
 $screen-min-mobile: 320;
 $screen-min-tablet: 744;
@@ -9,242 +10,8 @@ $screen-min-desktop: 1280;
   @return $number * 1px;
 }
 
-@mixin padding($top, $bottom: $top) {
-  padding: $top 1.4375rem $bottom;
-
-  @media screen and (min-width: withPx($screen-min-tablet)) {
-    padding: $top 3.5rem $bottom;
-  }
-
-  @media screen and (min-width: withPx($screen-min-desktop)) {
-    padding: $top 5.5rem $bottom;
-  }
-}
-
 @mixin typography() {
-  .display {
-    &-nav {
-      font-family: Taruno Wide;
-      font-size: 2.125rem;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 118%;
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 3.0625rem;
-      }
-    }
-
-    &-section {
-      font-family: Plus Jakarta Sans;
-      font-size: 5.3669rem;
-      font-style: normal;
-      font-weight: 800;
-      line-height: 84%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 8.5rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 10.8045rem;
-      }
-    }
-
-    &-scroller {
-      font-family: Mango Grotesque;
-      font-size: 5rem;
-      font-style: normal;
-      font-weight: 900;
-      line-height: 91.5%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 8.125rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 9.75rem;
-      }
-    }
-  }
-
-  .header {
-    &-normal {
-      font-family: Plus Jakarta Sans;
-      font-size: 3.0625rem;
-      font-style: normal;
-      font-weight: 800;
-      line-height: 84%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 3.5rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 3.75rem;
-      }
-    }
-  }
-
-  .paragraph {
-    &-normal {
-      font-family: Plus Jakarta Sans;
-      font-size: 1.125rem;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 123.5%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 1.625rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 1.4375rem;
-      }
-    }
-
-    &-nav {
-      font-family: Plus Jakarta Sans;
-      font-size: 1rem;
-      font-style: normal;
-      font-weight: 800;
-      line-height: 93%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 1.125rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 1.375rem;
-      }
-    }
-
-    &-location {
-      font-family: Plus Jakarta Sans;
-      font-size: 1.25rem;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 135%;
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 1.5rem;
-      }
-    }
-  }
-
-  .caption {
-    &-pill {
-      font-family: Plus Jakarta Sans;
-      font-size: 0.75rem;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 123.5%;
-
-      @media screen and (min-width: withPx($screen-min-tablet)) {
-        font-size: 0.875rem;
-      }
-
-      @media screen and (min-width: withPx($screen-min-desktop)) {
-        font-size: 0.9375rem;
-      }
-    }
-  }
 }
 
 @mixin utils() {
-  .hide {
-    &-next {
-      display: none;
-    }
-
-    &-mobile {
-      display: none;
-    }
-
-    &-tablet {
-      display: unset;
-    }
-
-    &-desktop {
-      display: unset;
-    }
-  }
-
-  .show {
-    &-mobile {
-      display: unset;
-    }
-
-    &-tablet {
-      display: none;
-    }
-
-    &-desktop {
-      display: none;
-    }
-  }
-
-  @media screen and (min-width: withPx($screen-min-tablet)) {
-    .hide {
-      &-mobile {
-        display: unset;
-      }
-
-      &-tablet {
-        display: none;
-      }
-
-      &-desktop {
-        display: unset;
-      }
-    }
-
-    .show {
-      &-next {
-        display: unset;
-      }
-
-      &-mobile {
-        display: none;
-      }
-
-      &-tablet {
-        display: unset;
-      }
-
-      &-desktop {
-        display: none;
-      }
-    }
-  }
-
-  @media screen and (min-width: withPx($screen-min-desktop)) {
-    .hide {
-      &-mobile {
-        display: unset;
-      }
-
-      &-tablet {
-        display: unset;
-      }
-
-      &-desktop {
-        display: none;
-      }
-    }
-
-    .show {
-      &-mobile {
-        display: none;
-      }
-
-      &-tablet {
-        display: none;
-      }
-
-      &-desktop {
-        display: unset;
-      }
-    }
-  }
 }
