Update(yusrmuttaqien-site): CSS layer & custom classes

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,160 +10,171 @@ $color-white: #f7f3eb;
 }
 
 @mixin typography() {
-  .trim-notable {
-    line-height: 1.06em;
+  @layer base {
+    .trim-notable {
+      line-height: 1.06em;
 
-    &::before {
-      content: '';
-      margin-bottom: -0.318em;
-      display: table;
+      &::before {
+        content: '';
+        margin-bottom: -0.318em;
+        display: table;
+      }
+
+      &::after {
+        content: '';
+        margin-top: -0.032em;
+        display: table;
+      }
     }
 
-    &::after {
-      content: '';
-      margin-top: -0.032em;
-      display: table;
-    }
-  }
+    .trim-nogap-notable {
+      line-height: 0.72em;
 
-  .trim-nogap-notable {
-    line-height: 0.72em;
+      &::before {
+        content: '';
+        margin-bottom: -0.143em;
+        display: table;
+      }
 
-    &::before {
-      content: '';
-      margin-bottom: -0.143em;
-      display: table;
-    }
-
-    &::after {
-      content: '';
-      margin-top: 0.143em;
-      display: table;
-    }
-  }
-
-  .trim-plus-jakarta-sans {
-    line-height: 1.3em;
-
-    &::before {
-      content: '';
-      margin-bottom: -0.2218em;
-      display: table;
+      &::after {
+        content: '';
+        margin-top: 0.143em;
+        display: table;
+      }
     }
 
-    &::after {
-      content: '';
-      margin-top: -0.1507em;
-      display: table;
+    .trim-plus-jakarta-sans {
+      line-height: 1.3em;
+
+      &::before {
+        content: '';
+        margin-bottom: -0.2218em;
+        display: table;
+      }
+
+      &::after {
+        content: '';
+        margin-top: -0.1507em;
+        display: table;
+      }
     }
-  }
 
-  .trim-libre-barcode-128 {
-    line-height: 1em;
+    .trim-libre-barcode-128 {
+      line-height: 1em;
 
-    &::before {
-      content: '';
-      margin-bottom: 0.0475em;
-      display: table;
+      &::before {
+        content: '';
+        margin-bottom: 0.0475em;
+        display: table;
+      }
+
+      &::after {
+        content: '';
+        margin-top: -0.3425em;
+        display: table;
+      }
     }
 
-    &::after {
-      content: '';
-      margin-top: -0.3425em;
-      display: table;
+    a {
+      color: $color-white;
     }
-  }
 
-  a {
-    color: $color-white;
-  }
+    .truncate {
+      // display: -webkit-box;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 1;
+      min-width: 0;
+    }
 
-  html,
-  body,
-  div,
-  span,
-  applet,
-  object,
-  iframe,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  blockquote,
-  pre,
-  a,
-  abbr,
-  acronym,
-  address,
-  big,
-  cite,
-  code,
-  del,
-  dfn,
-  em,
-  img,
-  ins,
-  kbd,
-  q,
-  s,
-  samp,
-  small,
-  strike,
-  strong,
-  sub,
-  sup,
-  tt,
-  var,
-  b,
-  u,
-  i,
-  center,
-  dl,
-  dt,
-  dd,
-  ol,
-  ul,
-  li,
-  fieldset,
-  form,
-  label,
-  legend,
-  table,
-  caption,
-  tbody,
-  tfoot,
-  thead,
-  tr,
-  th,
-  td,
-  article,
-  aside,
-  canvas,
-  details,
-  embed,
-  figure,
-  figcaption,
-  footer,
-  header,
-  hgroup,
-  menu,
-  nav,
-  output,
-  ruby,
-  section,
-  summary,
-  time,
-  mark,
-  audio,
-  video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+    html,
+    body,
+    div,
+    span,
+    applet,
+    object,
+    iframe,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    blockquote,
+    pre,
+    a,
+    abbr,
+    acronym,
+    address,
+    big,
+    cite,
+    code,
+    del,
+    dfn,
+    em,
+    img,
+    ins,
+    kbd,
+    q,
+    s,
+    samp,
+    small,
+    strike,
+    strong,
+    sub,
+    sup,
+    tt,
+    var,
+    b,
+    u,
+    i,
+    center,
+    dl,
+    dt,
+    dd,
+    ol,
+    ul,
+    li,
+    fieldset,
+    form,
+    label,
+    legend,
+    table,
+    caption,
+    tbody,
+    tfoot,
+    thead,
+    tr,
+    th,
+    td,
+    article,
+    aside,
+    canvas,
+    details,
+    embed,
+    figure,
+    figcaption,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    output,
+    ruby,
+    section,
+    summary,
+    time,
+    mark,
+    audio,
+    video {
+      margin: 0;
+      padding: 0;
+      border: 0;
+      font-size: 100%;
+      font: inherit;
+      vertical-align: baseline;
+    }
   }
 }
