--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  *::selection {
+    @apply bg-grey/80 dark:bg-beige/80 text-beige dark:text-grey;
+  }
+}
