add/adjust/test - lenis --- - tailwind config --- - stacked layout

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,25 @@
   *::selection {
     @apply bg-grey/80 dark:bg-beige/80 text-beige dark:text-grey;
   }
+
+  html.lenis,
+  html.lenis body {
+    height: auto;
+  }
+
+  .lenis.lenis-smooth {
+    scroll-behavior: auto !important;
+  }
+
+  .lenis.lenis-smooth [data-lenis-prevent] {
+    overscroll-behavior: contain;
+  }
+
+  .lenis.lenis-stopped {
+    overflow: hidden;
+  }
+
+  .lenis.lenis-scrolling iframe {
+    pointer-events: none;
+  }
 }
