--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,26 @@
 @tailwind utilities;
 
 @layer utilities {
+  * {
+    scrollbar-width: thin; /* 11px */
+    scrollbar-color: theme(colors.grey / 10%) theme(colors.beige);
+  }
+
+  *::-webkit-scrollbar {
+    --scrollbar-dimension: 11px;
+
+    width: var(--scrollbar-dimension);
+    height: var(--scrollbar-dimension);
+  }
+
+  *::-webkit-scrollbar-track {
+    background-color: theme(colors.beige);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: theme(colors.grey / 10%);
+  }
+
   *::selection {
     @apply bg-grey/80 dark:bg-beige/80 text-beige dark:text-grey;
   }
@@ -26,5 +46,19 @@
 
   .lenis.lenis-scrolling iframe {
     pointer-events: none;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    * {
+      scrollbar-color: theme(colors.beige / 10%) theme(colors.grey);
+    }
+
+    *::-webkit-scrollbar-track {
+      background-color: theme(colors.grey);
+    }
+
+    *::-webkit-scrollbar-thumb {
+      background-color: theme(colors.beige / 10%);
+    }
   }
 }
