add/update/chore/migrated - tailwind.config easing & keyframes - framer-motion (constant) - home-hero-animate (hook) - transition-slide-up (transition) --- - blueprint (component) html structure - yusr-muttaqien (component) forwardRef - loader (fragment) styling - loader-animate (hook) calculation - navbar-animate (hook) sequence timing - navbar-measure (hook) selector - _app font definition - index (page) content --- - home folder structure --- - lenis (provider)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,7 +37,7 @@
   }
 
   body {
-    @apply unhoverable:min-w-80 hoverable:min-w-[calc(20rem-0.6875rem)] antialiased min-w-full text-grey dark:text-beige;
+    @apply unhoverable:min-w-80 hoverable:min-w-[calc(20rem-0.6875rem)] antialiased min-w-full text-grey dark:text-beige font-helvetica-neue;
   }
 
   .lenis.lenis-smooth {
