update/add/fix/complete/chore - tailwind.config screens offset - link (component) default scroll behavior - masteries-entry (hook) adjust with split-type (hook) changes --- - media-query (provider) & tailwind.config new breakpoint & isBruteCheck - media-query (hook) bruteCheckQuery - split-type (hook) resplit and disconnector --- - navbar-lang (fragment) safari cutoff bug --- - home-projects-entry (hook) --- - lenis (provider) types

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,14 +3,16 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --scrollbar-dimension: 11px;
+  }
+
   * {
     scrollbar-width: thin; /* 11px */
     scrollbar-color: theme(colors.grey.DEFAULT / 10%) theme(colors.beige.DEFAULT);
   }
 
   *::-webkit-scrollbar {
-    --scrollbar-dimension: 11px;
-
     width: var(--scrollbar-dimension);
     height: var(--scrollbar-dimension);
   }
