update/chore/add - trim property in tailwind-config - animation delays in link component - background transition and min height in navbar menu fragment - split type definition for Trans component --- - move cursor logic to interactive hook --- - hero component - id in navbar component - navbar-total-height as css variable in navbar measure hook - content for internets as global - dark mode detection in mediaQuery context - limitMove util

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,16 +8,14 @@
   }
 
   * {
-    scrollbar-width: thin; /* 11px */
+    scrollbar-width: thin;
     scrollbar-color: theme(colors.grey.DEFAULT / 10%) theme(colors.beige.DEFAULT);
     cursor: none !important;
   }
   *::-webkit-scrollbar-track {
-    /* background-color: theme(colors.beige.DEFAULT); */
     @apply bg-dynamic-beige;
   }
   *::-webkit-scrollbar-thumb {
-    /* background-color: theme(colors.grey.DEFAULT / 10%); */
     @apply bg-dynamic-[grey_10];
   }
   *::selection {
@@ -54,5 +52,18 @@
     * {
       scrollbar-color: theme(colors.beige.DEFAULT / 10%) theme(colors.grey.DEFAULT);
     }
+  }
+}
+
+@layer components {
+  .hero-roles {
+    counter-reset: roles;
+  }
+
+  .hero-roles p::before {
+    display: inline;
+    margin-right: 1ch;
+    counter-increment: roles;
+    content: '(' counter(roles) ')';
   }
 }
