add/chore/update - env key for base url - base open graph contents - scroll-margin-top to all elements --- - move cv pdfs to Vercel Blob - move image from /public to related directory - move Index Head to index page component --- - Navbar Menu styling - root navbar-docked-minimal-height calculation

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
     cursor: none !important;
     -ms-overflow-style: none; /* Internet Explorer 10+ */
     scrollbar-width: none !important; /* Firefox */
+    scroll-margin-top: var(--navbar-docked-minimal-height);
   }
   *::-webkit-scrollbar {
     display: none !important; /* Safari and Chrome */
