update/add/chore - tailwind.config body fontSize - Link ArrowLook styling - ListContent extension button styling - global body min-w styling --- - Translation to About & Projects page --- - i18n getter on About Information content hook

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,8 +56,8 @@
   }
 
   body {
-    @apply unhoverable:min-w-80 hoverable:min-w-[calc(20rem-0.6875rem)] antialiased;
-    @apply min-w-full text-dynamic-grey font-helveticaNeue body;
+    @apply min-w-80 hoverable:min-w-[calc(20rem-0.6875rem)] antialiased;
+    @apply text-dynamic-grey font-helveticaNeue body;
   }
 
   .lenis.lenis-smooth {
